# iWrap

./: .gitattributes  .gitignore  LICENSE  LICENSE.md  MANIFEST.in  Makefile  README.md  Readme.md  ReleaseNotes.md  TODO  build_docs.sh  pyproject.toml  requirements_core.txt  set-gw.bash  set-gw.sh  set-iter.sh  setup.cfg  setup.py
docs/: .gitignore  Dockerfile  Makefile  README.md  _config.yml  _toc.yml  build.sh  conf.py  html_to_md.py  html_to_rst.py  iWrap_introduction.md  index.rst  project_informations.yaml  requirements.txt
docs/_templates/: iwrap.gui.settings.rst  iwrap.rst
docs/documentation/: actor_generation_cmdln.rst  actor_usage.rst  api-autogen.rst  code_standardization.rst  developers_manual.rst  iWrap_intro.rst  iwrap_gui.rst  project_description.rst  template.rst
docs/documentation_files/: docstring_documentation.rst  iwrap.generation.rst  iwrap.generators.rst  iwrap.gui.rst  iwrap_architecture.rst  iwrap_generated_actors.rst  iwrap_introduction.rst  iwrap_python_actor.rst
docs/iwrap_confluence_documentation/: Wrapping-user-codes-into-actors---iWrap_70877391.rst  (+6 more)
envs/: set-env.sh
examples/: .gitignore
iwrap/: __init__.py  _version.py  iwrap_main.py  requirements.txt
module/: iWrap.in
tests/: .gitignore  Makefile  code_description-01.yaml  context.py  example.py  example_test.py  generate_junit_report.sh  integration_tests.sh  pytest.ini  pytests.py  run-tests.sh  run_code_check.sh  run_tests.sh  serialization.py  serialization_tests.sh  set_test_env.sh  static_code_analysis.sh  test_code_description.py  test_platform_settings.py  test_serialization.py
tutorials/: .gitignore  Dockerfile  README.md  build.sh
venv2/: pyvenv.cfg
(+743 files in other folders)
