[metadata]
name = iwrap
author = iWrap Developers
author_email = olivier.hoenen@iter.org
license = ITER license
description = A modular component generator, implemented in Python, used for creating IMAS actors from physics models.
long_description_content_type=text/x-rst
long_description = file: Readme.md
url = https://git.iter.org/projects/IMEX/repos/iwrap

[flake8]
ignore =
    W503 # line break before binary operator
exclude=
    .eggs
    docs
max-line-length = 120

[aliases]
test = pytest
